# FlashFairyPP

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  apply-clang.sh  library.json
.github/workflows/: main.yml  wintest.yml
lib/FlashFairyPP/: BitArray.h  FlashFairyPP.cpp  FlashFairyPP.h
test/: FlashFairyPPTest.cpp  FlashFairyPPTest.cpp-d40c197b  Mocks.cpp  Mocks.h
